# OLIO-ohjelmointi-kevat-2025

./: .gitignore  README.md
teht1/: main.cpp
teht2/: game.cpp  game.h  main.cpp
teht3/: .gitignore  chef.cpp  chef.h  italianchef.cpp  italianchef.h  main.cpp
teht4/pankkitili/: CMakeLists.txt  asiakas.cpp  asiakas.h  luottotili.cpp  luottotili.h  main.cpp  pankkitili.cpp  pankkitili.h
teht5/: main.cpp  notifikaattori.cpp  notifikaattori.h  seuraaja.cpp  seuraaja.h
teht6/: .gitignore  main.cpp  student.cpp  student.h
teht7-1/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
teht7-2/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
teht8/: mainwindow.cpp  mainwindow.h  mainwindow.ui
